--- a/_config.yml
+++ b/_config.yml
@@ -4,27 +4,27 @@ repository: Git repository where your resume will be hosted, only required if yo
 
 # Personal info
 name: Zhidan Luo
-title: Your job title
-email: Your email (optional)
-phone: Your phone number (optional)
-website: Your website (eg. https://google.com)(optional)
+title: University of Virginia Computer Engineering Master Student
+email: zhidanluo007@gmail.com
+phone: 1-434-227-0903
+website: zhidanluo.github.io
 
 darkmode: false
 
 # Social links
 twitter_username: jekyllrb
 github_username:  jekyll
-stackoverflow_username: "00000001"
-dribbble_username: jekyll
+# stackoverflow_username: "00000001"
+# dribbble_username: jekyll
 facebook_username: jekyll
-flickr_username: jekyll
+# flickr_username: jekyll
 instagram_username: jekyll
 linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-googleplus_username: +jekyll
-orcid_username: 0000-0000-0000-0000
+# xing_username: jekyll
+# pinterest_username: jekyll
+# youtube_username: jekyll
+# googleplus_username: +jekyll
+# orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
 additional_links:
@@ -43,7 +43,7 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: images/profile.JPG
 about_content: | # this will include new lines to allow paragraphs
   Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
 
