--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
-# favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
+repository: zhidanluo/zhidanluo.github.io
+favicon: assets/favicon.ico
 
 # Personal info
 name: Zhidan Luo
@@ -12,14 +12,14 @@ website: https://github.com/zhidanluo
 darkmode: false
 
 # Social links
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: luo_zhidan
+github_username:  zhidanluo
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
-facebook_username: jekyll
+facebook_username: Zhidan Luo
 # flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
+instagram_username: zhidan.luo
+linkedin_username: Zhidan Luo
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
@@ -27,10 +27,10 @@ linkedin_username: jekyll
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: Link name
-  icon: Font Awesome brand icon name (eg. fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-  url: Link url (eg. https://google.com)
+# additional_links:
+# - title: Link name
+#   icon: Font Awesome brand icon name (eg. fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+#   url: Link url (eg. https://google.com)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
