--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ email: zhidanluo007@gmail.com
 phone: 1-434-227-0903
 website: https://github.com/zhidanluo
 
-darkmode: false
+darkmode: true
 
 # Social links
 twitter_username: luo_zhidan
