--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ twitter_username: luo_zhidan
 github_username:  zhidanluo
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
-facebook_username: Zhidan Luo
+facebook_username: zhidan.luo.18
 # flickr_username: jekyll
 instagram_username: zhidan.luo
-linkedin_username: Zhidan Luo
+linkedin_username: zhidan-luo
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
