--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,14 @@
 # Education Template
 - layout: left
+  name: University of Virginia
+  dates: 2018 – Present
+  qualification: Computer Engineering, MEng
+  quote: >
+    Short institution or course description (optional)
+  description: | # this will include new lines to allow paragraphs
+    Description of qualification
+
+- layout: left
   name: Institution name
   dates: Date Range (eg. 2016 - 2019)
   qualification: Qualifications (eg. BA Performing Arts)
