--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,10 +4,9 @@
   dates: 2018 – Present
   qualification: Computer Engineering, MEng
   quote: >
-    Machine Learning, Data Mining, Database System, Digital Image Processing, 
-    Design and Analysis of Algorithms, Robot Control System...
+    Machine Learning, Data Mining, Database System, Digital Image Processing, Robot Control System...
   description: | # this will include new lines to allow paragraphs
-    Current GPA: 3.940/4.000;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Current GPA: 3.940/4.000;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Degree expected in May 2020
 
 - layout: left
@@ -15,7 +14,7 @@
   dates: 2014 - 2018
   qualification: Electronic and Electrical Engineering, BEng, with Honors of the Second-First Class
   quote: >
-    Computer Architecture, MATLAB and Numerical Analysis, Digital Signal Processing...
+    Computer Architecture, MATLAB and Numerical Analysis, Communication System...
   description: | # this will include new lines to allow paragraphs
     Overall GPA: 88.54/100;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Rank: 13/240;
@@ -25,6 +24,7 @@
   dates: 2014 - 2018
   qualification: Electronic Information Engineering, BEng
   quote: >
+     Digital Signal Processing, Signal and System, Linear System Control...
   description: | # this will include new lines to allow paragraphs
     Overall GPA: 88.54/100;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Rank: 13/240;
