--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,7 +6,7 @@
   quote: >
     Machine Learning, Data Mining, Database System, Digital Image Processing, Robot Control System...
   description: | # this will include new lines to allow paragraphs
-    Current GPA: 3.940/4.000;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Current GPA: 3.940/4.000;&nbsp;&nbsp;&nbsp;&nbsp;
     Degree expected in May 2020
 
 - layout: left
