--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,8 @@ about_content: | # this will include new lines to allow paragraphs
   I have completed my undergraduate in Electronic and Electrical Engineering both from University of Glasgow (UoG) 
   and University of Electronic Science and Technology of China (UESTC). My undergraduate thesis supervisor was 
   [Dr. Wasim Ahmad](https://www.gla.ac.uk/schools/engineering/staff/wasimahmad/#).<br/>
+  
+  I really enjoy travelling with my girl fridend, especially **Disney World** and **Universal Studios**!!!:smile:
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
