--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ about_content: | # this will include new lines to allow paragraphs
   and University of Electronic Science and Technology of China (UESTC). My undergraduate thesis supervisor was 
   [Dr. Wasim Ahmad](https://www.gla.ac.uk/schools/engineering/staff/wasimahmad/#).<br/>
   
-  I really enjoy travelling with my girl fridend, especially **Disney World** and **Universal Studios**!!!:smile:
+  I really enjoy travelling with my girl fridend, especially **Disney World** and **Universal Studios**.:stuck_out_tongue_winking_eye::smiley::bowtie::smiley::smile:.
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
