--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,8 @@ about_content: | # this will include new lines to allow paragraphs
   and University of Electronic Science and Technology of China (UESTC). My undergraduate thesis supervisor was 
   [Dr. Wasim Ahmad](https://www.gla.ac.uk/schools/engineering/staff/wasimahmad/#).<br/>
   
-  I really enjoy travelling with my girl fridend, especially **Disney World** and **Universal Studios**.
+  In my spare time, I really enjoy travelling with my girl fridend [Xin](https://www.instagram.com/devil_mx16/), 
+  especially we having fun in **Disney World** and **Universal Studios**.
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
