--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: #(Use this to override about more section title)
 more_content: | # this will include new lines to allow paragraphs
-  <p align="center">
+  <div align="center">
     <img width="10%" height="10%" src="https://github.com/zhidanluo/zhidanluo.github.io/blob/master/images/dream.jpg"/>
-  </p>
+  </div>
 
 # Footer
 footer_show_references: true
