--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: #(Use this to override about more section title)
 more_content: | # this will include new lines to allow paragraphs
-  <div align="center">
-    <img width="35%" height="35%" src="images/dream.jpg"/>
-  </div>
+  <p align="center">
+    <img width="35%" height="35%" src="images/dream.jpg">
+  </p>
 
 # Footer
 footer_show_references: true
