--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,7 +12,7 @@
   name: [Tiling Puzzle Solver](https://github.com/zhidanluo/tiling-puzzle-solver)
 #   link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
   github: zhidanluo/tiling-puzzle-solver
-#   quote: >
-#     Short overview of the project (optional)
+  quote: >
+    
   description: | # this will include new lines to allow paragraphs
     Solve arbitrary tiling puzzles based on backtracking algorithm
