--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,7 +10,7 @@
 
 - layout: left
   name: Tiling Puzzle Solver
-  link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+#   link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
   github: zhidanluo/tiling-puzzle-solver
   quote: >
     
