--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,10 @@ about_content: | # this will include new lines to allow paragraphs
   [Dr. Wasim Ahmad](https://www.gla.ac.uk/schools/engineering/staff/wasimahmad/#).<br/>
   
   In my spare time, I really enjoy travelling with my girl fridend [Xin](https://www.instagram.com/devil_mx16/), 
-  especially we having fun in **Disney World** and **Universal Studios**.
+  especially we having fun in **Disney World** and **Universal Studios**.<br/>
+  
+  If interested, you can find my full 
+  [CV](https://github.com/zhidanluo/zhidanluo.github.io/blob/master/cv/Resume_0.11.pdf) here.
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
