--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ about_content: | # this will include new lines to allow paragraphs
   especially we having fun in **Disney World** and **Universal Studios**.<br/>
   
   If interested, you can find my full 
-  [CV](https://github.com/zhidanluo/zhidanluo.github.io/blob/master/cv/Resume_0.11.pdf) here.
+  [CV](cv/Resume_0.11.pdf) here.
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
